[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/kenney-future-narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://assets/kenneylogo.png" type="Texture" id=4]
[ext_resource path="res://assets/kritaicon.png" type="Texture" id=5]
[ext_resource path="res://assets/blendericon.png" type="Texture" id=6]
[ext_resource path="res://menu/default_theme.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="MainMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 19.0
margin_right = -19.0
margin_bottom = -21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0
dragger_visibility = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer"]
margin_right = 984.0
margin_bottom = 98.0

[node name="Title" type="Label" parent="MarginContainer/VSplitContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.419608, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bugged Racing"
align = 1
valign = 1

[node name="VersionLabel" type="Label" parent="MarginContainer/VSplitContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 984.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 3 )
text = "Version:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VSplitContainer"]
margin_top = 122.0
margin_right = 984.0
margin_bottom = 560.0
split_offset = 973
dragger_visibility = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VSplitContainer/VSplitContainer"]
margin_right = 984.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer"]
margin_left = 348.0
margin_top = 39.0
margin_right = 636.0
margin_bottom = 311.0

[node name="SingleplayerButton" type="Button" parent="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 48.0
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 288.0
margin_bottom = 104.0
text = "Multiplayer"

[node name="SettingsButton" type="Button" parent="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 288.0
margin_bottom = 160.0
text = "Settings"

[node name="AboutButton" type="Button" parent="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 288.0
margin_bottom = 216.0
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 288.0
margin_bottom = 272.0
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VSplitContainer/VSplitContainer"]
margin_top = 374.0
margin_right = 984.0
margin_bottom = 438.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuiltWithGodotLabel" type="Label" parent="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer"]
margin_top = 14.0
margin_right = 195.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "Built with "

[node name="GodotButton" type="TextureButton" parent="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 267.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )

[node name="BlenderButton" type="TextureButton" parent="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer"]
margin_left = 275.0
margin_right = 339.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KritaButton" type="TextureButton" parent="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer"]
margin_left = 347.0
margin_right = 411.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KenneyButton" type="TextureButton" parent="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer"]
margin_left = 419.0
margin_right = 538.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer/GodotButton" to="." method="_on_GodotButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer/BlenderButton" to="." method="_on_BlenderButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer/KritaButton" to="." method="_on_KritaButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VSplitContainer/HBoxContainer/KenneyButton" to="." method="_on_KenneyButton_pressed"]
